kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/bool.k
pub type Bool {
    true: Bool,
    false: Bool,
}
