kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/dot/illegal_dot_lhs.k
type Bool {
    true: Bool,
    false: Bool,
}

let x = match Bool.true { .true => Bool, .false => Bool }.true;
